      configuration file control which upgrades are presented to the user.
      (LP: #522910)

  [ Barry Warsaw ]
  * README
    - Minor clean up.
  
  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeCache.py:
    - check if the kernel returned from base-installer is upgradable
      (needed on hardy cdrom only upgrades)
  * check-new-release-gtk:
    - fix "ask me later" button time

  [ Dustin Kirkland ]
  * debian/91-release-upgrade: do the release upgrade check with the
    quiet option to avoid putting debug messages in the MOTD, LP: #548376

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Mar 2010 20:49:56 +0100

update-manager (1:0.133.6) lucid; urgency=low

  * DistUpgrade/DistUpgradeView.py:
    - display the right number of packages that are going to be
      removed
  * DistUpgrade/cdromupgrade:
    - fix cddirname detection when called without a directory prefix
  * DistUpgrade/DistUpgradeViewGtk.py:
    - fix crash in webkit progress

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Mar 2010 13:21:54 +0100

update-manager (1:0.133.5) lucid; urgency=low

  [ Markus Korn ]
  * UpdateManager/Core/utils.py:
    - Modified UpdateManager.Core.utils.on_battery() to use UPower per default
      (and DeviceKit.Power as fallback) to check if a system is running 
      on battery (LP: #539211)
  
  [ Michael Vogt ]
  * DistUpgrade/DistUpgrade.cfg:
    - hint that libparted1.8-12 can be removed to help the upgrader
      logic'
  * DistUpgrade/DistUpgradeViewGtk.py:
    - only run JS progress if there is actually a webkit view
  * DistUpgrade/DevelReleaseAnnouncement:
    - fix text to say that its a BETA release (LP: #544544)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - only run JS updateProgress script if we have a valid slideshow

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Mar 2010 11:17:24 +0100

update-manager (1:0.133.4) lucid; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeView.py: